Fix overflow issue on code samples

--- a/_sass/layout/_entries.scss
+++ b/_sass/layout/_entries.scss
@@ -113,6 +113,7 @@
     background-color: #f6f6f6;
     border: 1px solid #eaeaea;
     color: #333;
+    overflow-x: auto;
   }
 
   // Always remove bottom margin from child last element
